# eval

./: README.md  pyproject.toml
examples/minimal-workspace/: README.md  pyproject.toml
examples/minimal-workspace/evals/: eval_cli.py
examples/minimal-workspace/evals/cases/demo-chat/manual/: clarify.md
examples/minimal-workspace/evals/cases/demo-responses/manual/: hello.md
examples/minimal-workspace/evals/config/: app.yaml  promptfooconfig.yaml
examples/minimal-workspace/evals/config/targets/: demo-chat.yaml  demo-responses.yaml
examples/minimal-workspace/evals/targets/: demo_chat.py  demo_responses.py
src/elizant_eval/: __init__.py  common.py
src/elizant_eval/adapters/: __init__.py  chat_completions_driver_base.py  responses_driver_base.py  runner_common.py
src/eval/: __init__.py  cli.py
src/eval/adapters/: __init__.py
src/eval/engine/: assertions.js  case_sync.py  common.py  dashboard.py  provider.py  reporting.py  test_generator.py
src/eval/web/: __init__.py  server.py
src/eval/web/static/: app.js  index.html  styles.css
